--- a/src/style.css
+++ b/src/style.css
@@ -73,10 +73,13 @@ button {
     position: absolute;
     bottom: 40px;
     width: 100%;
+    background-color: rgba(0, 0, 0, 0);
     text-align: center;
+    overflow: visible;
 }
 
 .nav-buttons {
+    vertical-align: middle;
     margin-left: 4px;
     margin-right: 4px;
     height: 20px;
@@ -89,7 +92,27 @@ button {
 }
 
 .nav-buttons:hover {
-    height: 25px;
     opacity: 1;
     transition: 1s;
+}
+
+.mid {
+    height: 25px;
+    opacity: 1;
+}
+
+.tooltip {
+    visibility: hidden;
+    position: absolute;
+    top: 25px;
+    width: 100px;
+    height: 15px;
+    background-color: black;
+    color: white;
+    z-index: 20;
+    text-align: center;
+}
+
+.nav-buttons:hover .tooltip {
+    visibility: visible;
 }
